# railwayreadybotbuilder

BotBuilder/: app.py  auth.py  config.py  create_fresh_bot.py  direct_webhook_test.py  fix_webhook.py  pyproject.toml  register_clean_webhook.py  register_webhook_clean.py  register_working_webhook.py  register_working_webhook_final.py  replit.md  requirements.txt  security_audit_report.md  test_new_bot.py  update_bot_token.py  working_bot_test.py  working_webhook.py
BotBuilder/attached_assets/: Pasted-Build-a-program-called-LLM-Bot-Builder-using-Python-and-Flask-for-the-backend-Core-Requirement-1753555756702_1753555756703.txt  Pasted-Continue-expanding-the-LLM-Bot-Builder-project-into-a-fully-functional-MVP-using-the-existing-code-1753558406559_1753558406563.txt  Pasted-Expand-the-LLM-Bot-Builder-project-to-add-token-usage-tracking-and-analytics-for-each-client-and-b-1753561725894_1753561725896.txt  Pasted-Expand-the-LLM-Bot-Builder-project-to-implement-the-deployment-wizard-and-integrate-bots-with-real-1753560581978_1753560581979.txt  Pasted-Expand-the-LLM-Bot-Builder-project-to-improve-knowledge-base-handling-and-management-for-each-bot--1753564167602_1753564167604.txt  Pasted-Expand-the-LLM-Bot-Builder-project-to-upgrade-the-dashboard-into-a-fully-usable-interface-for-mana-1753559951190_1753559951190.txt  Pasted-Expand-the-current-LLM-Bot-Builder-project-to-add-a-Clients-system-and-link-bots-to-specific-clien-1753559389299_1753559389299.txt  (+4 more)
BotBuilder/docs/: deployment.md
BotBuilder/frontend/: dashboard.js  index.html  simple-dashboard.html  simple-dashboard.js  (+1 more)
(+29 files in other folders)
